--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "new-component": "^5.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-lottie": "^1.2.4",
     "react-scripts": "5.0.1",
     "styled-components": "^6.1.8",
     "web-vitals": "^2.1.4"
